product-service/base/deployment.yaml
deployment.yamlapiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: ghcr.io/niridoy/rocket-product-service:latest
          ports:
            - containerPort: 8080
